--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@ body{
     border:1px solid white;
     background-color:rgb(86, 87, 116);
 }
+
+#logger {
+    border: 1px solid white;
+    background-color:rgb(86, 87, 116);
+    width: 50%;
+    text-align: center;
+    color: lightgreen;
+    visibility: hidden;
+}
